correct h3 spacing on training-index

--- a/pidgin/css/pidgin.css
+++ b/pidgin/css/pidgin.css
@@ -1512,6 +1512,10 @@ main blockquote p:after {
     background-color:#E0FF00;
 }
 
+.training-index .topic-summary .training h3 {
+    margin-top: 0;
+}
+
 .training-index .topic-summary .trainings > ul > li a:hover {
     --underline-background-color: black;
     border-color: transparent;
